--- a/src/app/admin/layout/navigation-menu/navigation-menu.component.html
+++ b/src/app/admin/layout/navigation-menu/navigation-menu.component.html
@@ -16,10 +16,10 @@
             <fa-icon icon="square-list" size="2x"></fa-icon>
             <span class="menu-item-label tw-text-gray">List</span>
         </div>
-        <div class="layout-wrapper" routerLink="../admin/list-management">
+        <!-- <div class="layout-wrapper" routerLink="../admin/list-management">
             <i class="fa fa-solid fa-stamp" style="font-size: xx-large;padding: 8%;"></i>
             <span class="menu-item-label tw-text-gray">Approvals</span>
-        </div>
+        </div> -->
     </div>
     <div class="lower-menu-items">
         <div class="layout-wrapper" routerLink="location-settings">
