--- a/src/app/admin/users/users-add-edit/users-add-edit.component.html
+++ b/src/app/admin/users/users-add-edit/users-add-edit.component.html
@@ -17,8 +17,8 @@
                     <div iconic-select-wrapper leftIcon="eye" [rightIcon]="['fas', 'caret-down']">
                       <select inputRef name="status" id="status" formControlName="status">
                           <option value="" disabled>Status</option>
-                          <option value="true">ACTIVE</option>
-                          <option value="false">INACTIVE</option>
+                          <option value="true">Active</option>
+                          <option value="false">Inactive</option>
                       </select>
                     </div>
                 </div>
@@ -33,69 +33,16 @@
                     </div>
                 </div>
                 <div formGroupName="userSetting">
-                    <div iconic-input-wrapper leftIcon="building">
+                    <div iconic-input-wrapper leftSvg="../../../../assets/images/department-input.svg">
                         <input inputRef type="text" id="department" placeholder="Department" formControlName="department">
                     </div>
                 </div>
-                <!-- <div formGroupName="user">
-                    <div iconic-select-wrapper leftIcon="id-card" [rightIcon]="['fas', 'caret-down']">
-                        <select inputRef name="userRole" id="userRole" formControlName="userRole" (change)="onRoleChange($event)">
-                            <option value="" disabled>Select user role</option>
-                            <option value="OPERATOR">OPERATOR</option>
-                            <option value="DRIVER">DRIVER</option>
-                            <option value="PARTNER">PARTNER</option>
-                        </select>
-                    </div>
-                </div> -->
-                
-                <!-- <div formGroupName="userSetting">
-                    <div iconic-select-wrapper leftIcon="eye" [rightIcon]="['fas', 'caret-down']">
-                        <select inputRef name="timezone" id="timezone" formControlName="timezone">
-                            <option value="" disabled>Select Timezone</option>
-                            <option value="Europe/Bucharest">Europe/Bucharest</option>
-                            <option value="Asia/Karachi">Asia/Karachi</option>
-                        </select>
-                    </div>
-                </div> -->
-                <!-- <div formGroupName="userSetting">
-                    <div iconic-select-wrapper leftIcon="eye" [rightIcon]="['fas', 'caret-down']">
-                        <select inputRef name="language" id="language" formControlName="language">
-                            <option value="" disabled>Select Language</option>
-                            <option value="EN">EN</option>
-                            <option value="RO">RO</option>
-                        </select>
-                    </div>
-                </div> -->
-                
-
-                <!-- <div formGroupName="userSetting">
-                    <div iconic-input-wrapper leftIcon="phone">
-                        <input inputRef type="text" id="phoneRegionCode" placeholder="Phone Region Code" formControlName="phoneRegionCode">
-                    </div>
-                </div> -->
-
-                <!-- <div formGroupName="userSetting" *ngIf="(selectedRole$ | async) === 'DRIVER'">
-                    <div iconic-select-wrapper leftIcon="eye" [rightIcon]="['fas', 'caret-down']">
-                        <select inputRef name="identityDocumentType" id="identityDocumentType" formControlName="identityDocumentType">
-                            <option value="" disabled>Select Identity Document Type</option>
-                            <option value="New">New</option>
-                            <option value="Old">Old</option>
-                        </select>
-                    </div>
-                </div> -->
-
-                <!-- <div formGroupName="userSetting" *ngIf="(selectedRole$ | async)=== 'DRIVER'">
-                    <div iconic-input-wrapper leftIcon="phone">
-                        <input inputRef type="text" id="idNumber" placeholder="ID Number" formControlName="idNumber">
-                    </div>
-                </div> -->
-
             </div>
 
             <div class="tw-flex tw-justify-center tw-pt-5">
-                <div class="tw-flex tw-gap-20">
-                    <button [routerLink]="id ? '../../list': '../list'" class="btn btn-outline-primary min-lg:tw-min-w-[200px]" type="button">Cancel</button>
-                    <button class="btn btn-primary min-lg:tw-min-w-[200px]" type="button" (click)="saveUser()" [disabled]="userForm.invalid || (isLoading$ | async)">Save</button>
+                <div class="tw-flex tw-gap-4">
+                    <button [routerLink]="id ? '../../list': '../list'" class="btn btn-outline-primary min-lg:tw-min-w-[250px]" type="button">Cancel</button>
+                    <button class="btn btn-primary min-lg:tw-min-w-[250px]" type="button" (click)="saveUser()" [disabled]="userForm.invalid || (isLoading$ | async)">Save</button>
                 </div>
             </div>
     </form>
