--- a/src/app/operator/layout/navigation-menu/navigation-menu.component.html
+++ b/src/app/operator/layout/navigation-menu/navigation-menu.component.html
@@ -32,10 +32,10 @@
           <fa-icon icon="square-list" size="2x"></fa-icon>
           <span class="menu-item-label tw-text-gray">List</span>
       </div>
-      <div class="layout-wrapper" routerLink="../admin/list-management">
+      <!-- <div class="layout-wrapper" routerLink="../admin/list-management">
           <img src="assets/images/rubber-stamp.svg">
           <span class="menu-item-label tw-text-gray">Approvals</span>
-      </div>
+      </div> -->
   </div>
   <div class="lower-menu-items">
       <div class="layout-wrapper" routerLink="location-settings">
